# klvm_tools_rs

./: .gitignore  CHANGELOG.md  Cargo.toml  pyproject.toml
.github/workflows/: build-arm64-wheels.yml  build-crate.yml  build-m1-wheel.yml  build-m1-wheel.yml.bak  build-riscv.yml  build-test.yml  npm-publish.yml
mock-test/: Makefile  mock.js  package-lock.json  package.json  stepper.js
resources/alpine/: Dockerfile
resources/tests/: test_binutils_api.py  test_klvm_step.py
resources/tests/game-referee-in-cl21/: test_library_basics.py
resources/tests/lib/: steprun.py
src/: lib.rs
src/classic/bins/: shrink.rs
src/classic/klvm/: __type_compatibility__.rs  casts.rs  mod.rs  serialize.rs  sexp.rs
src/classic/klvm_tools/: binutils.rs  cmds.rs  debug.rs  klvmc.rs  mod.rs  pattern_match.rs  sha256tree.rs
src/classic/platform/: argparse.rs
src/compiler/: cldb.rs  codegen.rs  compiler.rs  comptypes.rs  dialect.rs  evaluate.rs  frontend.rs  inline.rs  klvm.rs  lambda.rs  mod.rs  optimize.rs  preprocessor.rs  prims.rs  repl.rs  sexp.rs  usecheck.rs
src/compiler/optimize/: above22.rs  cse.rs  mod.rs  strategy.rs
src/compiler/preprocessor/: macros.rs  mod.rs
src/py/: api.rs  binutils.rs
src/tests/classic/: mod.rs  optimize.rs  run.rs  smoke.rs  stage_2.rs
src/wasm/: api.rs  jsval.rs
wasm/: Cargo.toml  README.md
wasm/src/: api.rs  jsval.rs  objects.rs
wasm/tests/: index.js
wasm/tests/klvm-tools-interface/: package.json
wasm/tests/klvm-tools-interface/src/lib/tests/: index.test.ts  random.test.ts
wasm/tests/test-data/: pwcoin.cl
(+19 files in other folders)
