[package]
name = "klvm_tools_wasm"
version = "0.1.34"
edition = "2018"
authors = ["Art Yerkes <art.yerkes@gmail.com>"]
description = "tools for working with chiklisp language; compiler, repl, python and wasm bindings"
homepage = "https://prozacchiwawa.github.io/klvm_tools_rs/"
readme = "README.md"
repository = "https://github.com/Chik-Network/klvm_tools_rs"
license = "MIT"
keywords = ["chik", "chiklisp", "klvm"]
categories = ["command-line-utilities"]

[lib]
name = "klvm_tools_wasm"
crate-type = ["cdylib"]
path = "src/mod.rs"

[dependencies]
klvm_tools_rs = { path= "..", features = [] }
klvmr = "0.1.24"
wasm-bindgen = "=0.2.83"
wasm-bindgen-test = "=0.3.25"
js-sys = "0.3.60"
